[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/sidebar/channels/channel_item.gd" id="1"]

[node name="ChannelItem" type="Button"]
custom_minimum_size = Vector2(0, 44)
offset_right = 220.0
offset_bottom = 44.0
flat = true
alignment = 0
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 6

[node name="TypeIcon" type="TextureRect" parent="HBox"]
layout_mode = 2
custom_minimum_size = Vector2(20, 20)
size_flags_vertical = 4
stretch_mode = 5

[node name="ChannelName" type="Label" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1

[node name="UnreadDot" type="ColorRect" parent="HBox"]
layout_mode = 2
custom_minimum_size = Vector2(8, 8)
size_flags_vertical = 4
color = Color(1, 1, 1, 1)
